-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 9
-
Component/s: core-libs
-
b71
-
windows
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8135938 | emb-9 | Roger Riggs | P3 | Resolved | Fixed | team |
| JDK-8130983 | 8u65 | Roger Riggs | P3 | Resolved | Fixed | b05 |
| JDK-8129577 | 8u60 | Roger Riggs | P3 | Resolved | Fixed | b22 |
| JDK-8138275 | emb-8u65 | Unassigned | P3 | Resolved | Fixed | b05 |
| JDK-8130590 | emb-8u60 | Roger Riggs | P3 | Resolved | Fixed | b22 |
| JDK-8180991 | openjdk7u | Roger Riggs | P3 | Resolved | Fixed | master |
I found several other calls to GetVersionEx that does version checking for no longer supported versions of Windows that could be cleaned out as well.
- backported by
-
JDK-8129577 GetVersionEx in java.base/windows/native/libjava/java_props_md.c might not get correct Windows version
-
- Resolved
-
-
JDK-8130590 GetVersionEx in java.base/windows/native/libjava/java_props_md.c might not get correct Windows version
-
- Resolved
-
-
JDK-8130983 GetVersionEx in java.base/windows/native/libjava/java_props_md.c might not get correct Windows version
-
- Resolved
-
-
JDK-8135938 GetVersionEx in java.base/windows/native/libjava/java_props_md.c might not get correct Windows version
-
- Resolved
-
-
JDK-8138275 GetVersionEx in java.base/windows/native/libjava/java_props_md.c might not get correct Windows version
-
- Resolved
-
-
JDK-8180991 GetVersionEx in java.base/windows/native/libjava/java_props_md.c might not get correct Windows version
-
- Resolved
-
- duplicates
-
JDK-8133519 java.exe and javaw.exe do not contain Windows 10 manifest
-
- Closed
-
-
JDK-8133799 After upgrade from Windows 8.1 to Windows 10, the getProperty("os.name") command still returned previous version (8.1)
-
- Closed
-
-
JDK-8081573 Add support for Windows 10
-
- Closed
-
- relates to
-
JDK-8129535 java_props_md.c should compile on VS 2010
-
- Closed
-
-
JDK-8149143 7uX: need to add support for Windows 10 ( os.name property related )
-
- Resolved
-
-
JDK-8059803 Update use of GetVersionEx to get correct Windows version in hs_err files
-
- Closed
-
-
JDK-8179615 Wrong os.name property in Windows 10 when run in the compatibility mode
-
- Closed
-
-
JDK-8081573 Add support for Windows 10
-
- Closed
-
-
JDK-8066656 System.getProperty( " os.name " ) returns " Windows NT (unknown) " on Windows 10
-
- Closed
-