8066504: GetVersionEx in java.base/windows/native/libjava/java_props_md.c might not get correct Windows version 0

System property os.name and os.version should report the version of kernel32.dll

Reviewed-by: alanb, igerasim